			Java Electric change log

NOTE: Please place changes under the version that will be released next.

BUG: (11/9/04, SMR) Mimic stitching crashes.
FIX: Replaced array of cached Polygons with a more robust HashMap.

************************* Version 8.01am: *********************************

IMP: (11/9/04, GVG) Metal1 back from 1.4 -> 1.2

BUG: (11/9/04, DN) Can't read mixture of JELIB and ELIB files.
FIX: In JELIB reader use "realizeCellsRecursively" instead of "instantiateCellContents".

IMP: (11/9/04, DN) When library is read in batch mode it sets its meaning preferences.

IMP: (11/9/04, DN) Forbidden characters ':' and '|' in cell names.

BUG: (11/8/04, SMR) Upper-level text is not shown when editing "down in-place".
FIX: In "PixelDrawing.drawText()" compute clipping bounds properly.

IMP: (11/8/04, GVG) Default sizes for new arcs/nodes in TSMC90 now correctly stored and retrieved from preferences
(moved MoCMOS.init() to Technology.init())

IMP: (11/8/04, GVG) Avoid to run DRC on Artwork or in case technology doesn't have rules associated

************************* Version 8.01al: *********************************

BUG: (11/8/04, RK) Fill Generator script must now select technology

BUG: (11/8/04, GVG) Metal 1 pin didn't get correct offset after resizing (1.2 -> 1.4 done on 11/06/04)
FIX: Metal 1 min width rule: 1.2 -> 1.4 to keep code consistent

IMP: (11/8/04, GVG) Correct aligment of m2/m3, m4/m5, m6/m7, and m8/m9 for TSMC90

BUG: (11/8/04, SMR) Reloading waveform window fails if there are a different number of sweeps.
FIX: Reload sweeps list correctly.

IMP/MAN: (11/8/04, SMR) When interactively resizing a node, holding Control limits
     resize to a single axis.  Holding Shift switches to center-based sizing.

IMP: (11/8/04, SMR) Disallow moving the cell-center when other objects are moving.

BUG: (11/8/04, SMR) Cell names are not sorted properly (the views are not considered).
     Names do not line-up properly in cross-library copy dialog.