@@ -2,6 +2,10 @@
 
 NOTE: Please place changes under the version that will be released next.
 
+IMP: (11/9/04, SMR) Redid cross-library copy so that it is safe from looping.
+
+IMP: (11/9/04, SMR) Closing a library ensures that it is saved to disk.
+
 BUG: (11/9/04, SMR) Mimic stitching crashes.
 FIX: Replaced array of cached Polygons with a more robust HashMap.
 
